# base_d3qn

./: .gitignore  AGENTS.md  LICENSE  README.md  bitcoin_signature_toy_experiment.md  pyproject.toml  requirements.txt  run.sh  sig_reports.md
configs/: baseline.yaml  d3qn_signature_capital.yaml  d3qn_signature_capital_6act_per06_n3_sellfrac_e06_bp002_gpu.yaml  d3qn_signature_capital_6act_per06_n3_sellfrac_e07_bp001_gpu.yaml  d3qn_signature_capital_6act_per06_n3_sellfrac_gpu.yaml  d3qn_signature_capital_6act_per06_n3_worstfold.yaml  d3qn_signature_capital_6act_per06_n3_worstfold_gpu.yaml  d3qn_signature_capital_6act_stable.yaml  d3qn_signature_capital_7act_per06_n3_sellfrac_gpu.yaml  d3qn_signature_capital_8act_per06_n3_sellfrac_e06_bp002_gpu.yaml  d3qn_signature_capital_8act_per06_n3_sellfrac_e07_bp001_gpu.yaml  d3qn_signature_capital_8act_per06_n3_sellfrac_gpu.yaml  default.yaml  extended_range.yaml  folds_rolling_long_oos.json  folds_signature_step1_screen_f3.json  folds_signature_step9_f1.json  ppo_signature.yaml  sac_signature.yaml  savio.env.example  signature-3.yaml  signature-4.yaml  signature.yaml  signature_smoke.yaml  sweep.yaml  sweep_seed_001.yaml  test_signature.yaml  test_signature_explore.yaml
data/: binance_btcusdt_1d_2017-08-17_latest.csv  btc_1d_merged.csv
legacy/: README.md
notebooks/: main.ipynb  signature_exploration.ipynb  train_tests.ipynb
reports/: experiments.md  progress.md
rl/: __init__.py
scripts/: backtest_report.py  benchmark_signature.py  benchmark_signature_wrapper.py  eval.py  eval_ppo.py  eval_sac.py  savio_pwd.py  sweep.py  (+9 more)
(+820 files in other folders)
